--- a/weixinsite/css/base.css
+++ b/weixinsite/css/base.css
@@ -153,6 +153,9 @@ a{color: #565656;}
 .width49{width: 49%!important;}
 /* nav头部  */
 nav{height: 5rem; line-height: 5rem; background-color: #20282b; text-align: center; border-bottom: 0.1rem solid #1b2225;position: relative}
+.head-title-appearance{
+    color: #fff;
+}
 .icon-home-appearance{
     font-size: 2rem;
     font-weight: bold!important;
@@ -205,13 +208,40 @@ nav{height: 5rem; line-height: 5rem; background-color: #20282b; text-align: cent
 .footer{
     text-align: center;
     color: #333;
-    padding: 2rem;
+    padding-top: 1rem;
 }
 .footer .selected{
     color: #999999;
 }
 .footer>div>span:first-child{
     margin-right: 1rem;
+}
+.bottom-logo{
+    width: 15rem;
+    margin: 0.5rem auto 0 auto;
+}
+.bottom-logo img{
+    width: 100%;
+}
+.footer-content{
+    background-color: #fff;
+    float: left;
+    width: 100%;
+}
+.footer-content li{
+    float: left;
+    width: 50%;
+    height: 5rem;
+    line-height: 5rem;
+    border-left: 0.1rem solid #ebebeb;
+    border-top: 0.1rem solid #ebebeb;
+    font-size: 1.6rem;
+}
+.footer-content li:first-child{
+    border-left: none;
+}
+.footer-content li:last-child{
+    margin-left: -0.1rem;
 }
 /* content */
 .content{
@@ -223,19 +253,34 @@ nav{height: 5rem; line-height: 5rem; background-color: #20282b; text-align: cent
     display: inline-block;
     height: 4rem;
     text-align: center;
+    cursor: pointer;
     min-width: 7rem;
-    background-color: #f66900;
-    border-radius: 0.416666rem;
+    background-color: #45bf14;
     color: #fff;
 }
 .m-button:active{
-    background-color: #f77f25;
+    background-color: #278608;
+}
+.m-button-empty{
+    display: inline-block;
+    height: 4rem;
+    cursor: pointer;
+    text-align: center;
+    min-width: 7rem;
+    background-color: #fff;
+    border:0.1rem solid #ebebeb;
+    color: #333;
+}
+.m-button-empty:active{
+    background-color: #45bf14;
+    color: #fff;
 }
 .m-button-content{
     line-height: 4rem;
 }
 .m-delete-button{
     height: 3rem;
+    cursor: pointer;
     display: inline-block;
     min-width: 7rem;
     background-color: #f8f8f8;
@@ -244,6 +289,7 @@ nav{height: 5rem; line-height: 5rem; background-color: #20282b; text-align: cent
     border-radius: 0.416666rem;
     margin-top: 1rem;
 }
+
 .m-underline-d0d0d0{
     border-bottom: 0.1rem solid #d0d0d0;
 }
@@ -282,4 +328,8 @@ nav{height: 5rem; line-height: 5rem; background-color: #20282b; text-align: cent
 .select{
     border: 0.1rem solid #f66900!important;
     border-radius: 0.416666rem!important;
+}
+
+.backgroundsise-cover{
+    background-size: cover!important;
 }
