--- a/weixinsite/css/idangerous.swiper.css
+++ b/weixinsite/css/idangerous.swiper.css
@@ -75,7 +75,12 @@
 .swiper-container, .swiper-slide {
 	width: 100%;
     overflow: hidden;
-    height: 20rem;
+    height: 24rem;
+}
+.swiper-container, .swiper-slide img{
+    width: 100%;
+    height: 100%;
+    max-height: 25rem;
 }
 
 .swiper-main{
@@ -122,6 +127,26 @@
     cursor: pointer;
 }
 .pagination2 .swiper-active-switch {
+    background: #b64a36;
+}
+.pagination3 {
+    text-align: center;
+    position: absolute;
+    left: 0;
+    z-index: 20;
+    right: 0;
+    bottom: 0.5rem
+}
+.pagination3 .swiper-pagination-switch {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
+    background: #fff;
+    margin: 0 3px;
+    cursor: pointer;
+}
+.pagination3 .swiper-active-switch {
     background: #b64a36;
 }
 
