--- a/weixinsite/css/base.less
+++ b/weixinsite/css/base.less
@@ -2,16 +2,7 @@
  * Created by Administrator on 14-7-10.
  */
 @charset "utf-8";
-/*颜色*/
-@red:#fe3332;
-@orange:#f66900;
-@ebebeb: #ebebeb;
-@white: #fff;
-@black: #000;
-@headbg: #20282b;
-@green: #45bf14;
-@fontColor: #333;
-@bgColor: #f3f3f3;
+@import "variables.less";
 
 /*
 @名称: base
@@ -215,50 +206,58 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
   width: 1.6rem;
   background-color: @red;
 }
-.icon-active:active{
-  background-color: @ebebeb;
-  color: @fontColor;
+
+.icon-active{
+  &:active{
+    background-color: @ebebeb;
+    color: @fontColor!important;
+  }
 }
 /* footer */
 .footer{
   text-align: center;
   color: @fontColor;
   padding-top: 1rem;
+  .selected{
+    color: #999999;
+  }
+  >div>span{
+    &:first-child{
+      margin-right: 1rem;
+    }
+  }
 }
-.footer .selected{
-  color: #999999;
-}
-.footer>div>span:first-child{
-  margin-right: 1rem;
-}
+
 .bottom-logo{
   width: 15rem;
   margin: 0.5rem auto 0 auto;
+  img{
+    width: 100%;
+  }
 }
-.bottom-logo img{
-  width: 100%;
-}
+
 .footer-content{
   background-color: @white;
   float: left;
   width: 100%;
+  li{
+    float: left;
+    width: 50%;
+    height: 5rem;
+    line-height: 5rem;
+    border-left: 0.1rem solid @ebebeb;
+    border-top: 0.1rem solid @ebebeb;
+    border-bottom: 0.1rem solid @ebebeb;
+    font-size: 1.6rem;
+    &:first-child{
+      border-left: none;
+    }
+    &:last-child{
+      margin-left: -0.1rem;
+    }
+  }
 }
-.footer-content li{
-  float: left;
-  width: 50%;
-  height: 5rem;
-  line-height: 5rem;
-  border-left: 0.1rem solid @ebebeb;
-  border-top: 0.1rem solid @ebebeb;
-  border-bottom: 0.1rem solid @ebebeb;
-  font-size: 1.6rem;
-}
-.footer-content li:first-child{
-  border-left: none;
-}
-.footer-content li:last-child{
-  margin-left: -0.1rem;
-}
+
 /* content */
 .content{
   width: 95%;
@@ -273,9 +272,10 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
   min-width: 7rem;
   background-color: @green;
   color: @white;
-}
-.m-button:active{
-  background-color: @green - #333;
+  border-radius: @radius;
+  &:active{
+    background-color: @green - #333;
+  }
 }
 .m-button-empty{
   display: inline-block;
@@ -284,17 +284,23 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
   text-align: center;
   min-width: 7rem;
   background-color: @white;
+  border-radius: @radius;
   border:0.1rem solid @ebebeb;
   color: @fontColor;
-}
-.m-button-empty:active{
-  background-color: @green;
-  color: @white;
+  &:active{
+    background-color: @green;
+    color: @white;
+  }
 }
 .m-button-content{
   line-height: 4rem;
 }
-
+.bg-gradients-bottom{
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(@black));
+}
+.bg-gradients-top{
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(@black), to(transparent));
+}
 .m-underline-d0d0d0{
   border-bottom: 0.1rem solid #d0d0d0;
 }
