--- a/weixinsite/css/home.css
+++ b/weixinsite/css/home.css
@@ -1,4 +1,5 @@
 /*颜色*/
+/*尺寸*/
 .navgation {
   display: -webkit-box;
   display: -moz-box;
@@ -85,6 +86,10 @@
   height: 24rem;
   position: relative;
 }
+.product-content {
+  height: 24rem;
+  position: relative;
+}
 .middle {
   display: table;
   vertical-align: middle;
@@ -112,12 +117,6 @@
 }
 .middle .data {
   font-size: 1rem;
-}
-.bg-gradients-bottom {
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#000000));
-}
-.bg-gradients-top {
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(#000000), to(transparent));
 }
 .app-guo {
   position: absolute;
@@ -154,12 +153,12 @@
   margin: 0 auto 1rem auto;
   border-bottom: 0.2rem solid #cccccc;
 }
-.news-block img {
-  width: 100%;
-}
 .news-block .title {
   font-size: 1.6rem;
   padding: 1rem;
+}
+.news-block img {
+  width: 100%;
 }
 .news-block .detail {
   font-size: 1.2rem;
