--- a/weixinsite/css/m-cart.css
+++ b/weixinsite/css/m-cart.css
@@ -1,9 +1,10 @@
 /*颜色*/
+/*尺寸*/
 .m-choose-product {
   background-color: #ffffff;
   height: auto;
   border-radius: 0.41666rem;
-  border-bottom: 0.2rem solid #ebebeb;
+  border-bottom: 0.1rem solid #ebebeb;
 }
 .m-shopping-cart {
   margin-bottom: 6rem;
@@ -11,6 +12,7 @@
 .m-shopping-cart ul li {
   border-bottom: 0.1rem solid #ebebeb;
   padding: 1rem;
+  position: relative;
 }
 .m-shopping-cart ul li:last-child {
   border-bottom: none;
@@ -24,9 +26,33 @@
   width: 6rem;
   display: inline-block;
 }
+.m-address-choose {
+  width: 1.6rem;
+  height: 1.6rem;
+  position: absolute;
+  top: 50%;
+  margin-top: -0.8rem;
+  border: 0.1rem solid #ebebeb;
+  left: 1.5rem;
+  float: left;
+}
+.address-selected {
+  background: url("../img/right_three.png") center top no-repeat;
+  background-size: 1.5rem 1.5rem;
+}
+.m-address-edit {
+  width: 6rem;
+  border-left: 0.1rem solid #ebebeb;
+  height: 100%;
+  line-height: 6rem;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
 .m-choose-detail {
   width: 22rem;
-  padding-left: 1rem;
+  padding-left: 2rem;
   float: left;
 }
 .m-choose-title {
@@ -213,6 +239,9 @@
 .submit-table-display ul li:last-child {
   border-bottom: none;
 }
+.submit-table-display ul li:last-child > div {
+  color: #f66900;
+}
 .submit-table-display ul li > div {
   display: inline-block;
   padding-top: 0.6rem;
@@ -223,16 +252,11 @@
   width: 20%;
   border-right: 0.1rem solid #d0d0d0;
   text-align: right;
+  font-weight: bold;
 }
 .submit-table-display ul li > div:last-child {
   width: 71%;
   text-align: right;
-}
-.submit-table-display ul li > div:first-child {
-  font-weight: bold;
-}
-.submit-table-display ul li:last-child > div {
-  color: #f66900;
 }
 .m-check-pay-area {
   margin-top: 1rem;
@@ -247,16 +271,16 @@
   background-color: #ffffff;
   height: 12.6rem;
 }
-.m-choose-product-new .m-choose-title {
+.m-shopping-cart-new .m-choose-title {
   font-size: 2rem;
   margin-top: 0;
   font-weight: bold;
 }
-.m-choose-product-new .m-choose-detail {
+.m-shopping-cart-new .m-choose-detail {
   padding: 1rem;
   width: auto;
 }
-.m-choose-product-new .m-choose-brief-detail {
+.m-shopping-cart-new .m-choose-brief-detail {
   font-size: 1.4rem;
 }
 .m-choose-detail-next {
@@ -346,6 +370,12 @@
   background-size: 100%;
   position: relative;
 }
+.m-center-partOne ul {
+  color: #565656;
+  background-color: #ffffff;
+  border-radius: 0.416666rem;
+  border-bottom: 0.1rem solid #ebebeb;
+}
 .m-center-partOne ul li {
   display: inline-block;
   width: 100%;
@@ -366,12 +396,6 @@
   display: inline-block;
   width: 1.5rem;
 }
-.m-center-partOne ul {
-  color: #565656;
-  background-color: #ffffff;
-  border-radius: 0.416666rem;
-  border-bottom: 0.1rem solid #ebebeb;
-}
 .m-center-login-button {
   font-size: 2rem;
   color: #f66900;
@@ -382,4 +406,49 @@
 }
 .no-order-list {
   padding: 2rem ;
+}
+.product-content {
+  height: 24rem;
+  position: relative;
+}
+.product {
+  margin-bottom: 1rem;
+}
+.top {
+  text-align: center;
+  color: #ffffff;
+  padding-top: 4rem;
+}
+.top .title {
+  font-size: 2.4rem;
+}
+.top .detail {
+  font-size: 1.6rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.left-top {
+  position: absolute;
+  top: 2rem;
+  left: 1rem;
+  color: #ffffff;
+}
+.left-top .title {
+  font-size: 2rem;
+}
+.left-top .detail {
+  font-size: 1.6rem;
+  margin-top: 0.5rem;
+  color: #f66900;
+}
+.right-bottom {
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
+}
+.right-bottom .m-button {
+  width: 10rem;
+}
+.right-bottom .m-button:first-child {
+  margin-right: 0.6rem;
 }
