--- a/weixinsite/css/m-cart.less
+++ b/weixinsite/css/m-cart.less
@@ -1,41 +1,60 @@
-/*颜色*/
-@red:#fe3332;
-@orange:#f66900;
-@ebebeb: #ebebeb;
-@white: #fff;
-@black: #000;
-@headbg: #20282b;
-@green: #45bf14;
-@fontColor: #333;
-@bgColor: #f3f3f3;
-@cccGrey: #ccc;
+@import "variables.less";
 
 .m-choose-product{
   background-color: @white;
   height: auto;
   border-radius: 0.41666rem;
-  border-bottom: 0.2rem solid @ebebeb;
+  border-bottom: 0.1rem solid @ebebeb;
 }
 .m-shopping-cart{
   margin-bottom: 6rem;
+  ul{
+    li{
+      border-bottom: 0.1rem solid @ebebeb;
+      padding: 1rem;
+      position: relative;
+      &:last-child{
+        border-bottom: none
+      }
+    }
+  }
 }
-.m-shopping-cart ul li{
-  border-bottom: 0.1rem solid @ebebeb;
-  padding: 1rem;
-}
-.m-shopping-cart ul li:last-child{border-bottom: none}
 .m-choose-image{
   display: inline-block;
   float: left;
+  img{
+    height: 6rem;
+    width: 6rem;
+    display: inline-block;
+  }
 }
-.m-choose-image img{
-  height: 6rem;
+.m-address-choose{
+  width: 1.6rem;
+  height: 1.6rem;
+  position: absolute;
+  top: 50%;
+  margin-top: -0.8rem;
+  border: 0.1rem solid #ebebeb;
+  left: 1.5rem;
+  float: left;
+}
+.address-selected{
+  background: url("../img/right_three.png") center top no-repeat;
+  background-size: 1.5rem 1.5rem;
+}
+.m-address-edit{
   width: 6rem;
-  display: inline-block;
+  border-left: 0.1rem solid #ebebeb;
+  height: 100%;
+  line-height: 6rem;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 .m-choose-detail{
   width: 22rem;
-  padding-left: 1rem;
+  padding-left: 2rem;
   float: left;
 }
 .m-choose-title{
@@ -68,9 +87,9 @@
   text-align: center;
   font-weight: bold;
   padding-left: 1rem;
-}
-.m-check-total-money >span{
-  color: @orange;
+  >span{
+    color: @orange;
+  }
 }
 .m-button-check{
   width: 100%;
@@ -130,13 +149,13 @@
   box-shadow: 0px 1px 1px #d0d0d0;
   margin-top: 0!important;
   height: 29rem;
-  border-bottom-left-radius: 0.416666rem;
-  border-bottom-right-radius: 0.416666rem;
+  border-bottom-left-radius: @radius;
+  border-bottom-right-radius: @radius;
 }
 .m-online-detail-content-new{
   padding-bottom: 0;
   height: auto;
-  border-radius: 0.416666rem;
+  border-radius: @radius;
 }
 .m-order-detail-partOne{
   color: #565656;
@@ -202,14 +221,16 @@
   border-radius: 0.416666rem;
   border-bottom: 0.1rem solid @ebebeb;
   color: #565656;
-}
-.choose-checkout-style ul li{
-  padding:1rem;
-  border-bottom:0.1rem solid @ebebeb;
-}
-.choose-checkout-style .select{
-  border: 0.1rem solid @orange;
-  border-radius: 0.416666rem;
+  ul{
+    li{
+      padding:1rem;
+      border-bottom:0.1rem solid @ebebeb;
+    }
+  }
+  .select{
+    border: 0.1rem solid @orange;
+    border-radius: 0.416666rem;
+  }
 }
 .m-choose-product-submit{
   border: none;
@@ -218,33 +239,33 @@
 }
 .submit-table-display{
   color: #565656;
-}
-.submit-table-display ul li{
-  border-bottom: 0.1rem solid #d0d0d0;
-}
-.submit-table-display ul li:last-child{
-  border-bottom: none;
-}
-.submit-table-display ul li > div{
-  display: inline-block;
-  padding-top: 0.6rem;
-  padding-bottom:0.6rem;
-  padding-right: 0.6rem;
-}
-.submit-table-display ul li > div:first-child{
-  width: 20%;
-  border-right: 0.1rem solid #d0d0d0;
-  text-align: right;
-}
-.submit-table-display ul li > div:last-child{
-  width: 71%;
-  text-align: right;
-}
-.submit-table-display ul li > div:first-child{
-  font-weight: bold;
-}
-.submit-table-display ul li:last-child>div{
-  color: @orange;
+  ul{
+    li{
+      border-bottom: 0.1rem solid #d0d0d0;
+      &:last-child{
+        border-bottom: none;
+        >div{
+          color: @orange;
+        }
+      }
+      >div{
+        display: inline-block;
+        padding-top: 0.6rem;
+        padding-bottom:0.6rem;
+        padding-right: 0.6rem;
+        &:first-child{
+          width: 20%;
+          border-right: 0.1rem solid #d0d0d0;
+          text-align: right;
+          font-weight: bold;
+        }
+        &:last-child{
+          width: 71%;
+          text-align: right;
+        }
+      }
+    }
+  }
 }
 .m-check-pay-area{
   margin-top: 1rem;
@@ -253,25 +274,25 @@
 }
 .m-shopping-cart-new{
   margin-bottom: 6rem;
-}
-.m-shopping-cart-new ul li{
-  border-bottom: 0.1rem solid @ebebeb;
-  background-color: @white;
-  height: 12.6rem;
-}
-.m-choose-product-new {
-}
-.m-choose-product-new .m-choose-title{
-  font-size: 2rem;
-  margin-top: 0;
-  font-weight: bold;
-}
-.m-choose-product-new .m-choose-detail{
-  padding:1rem;
-  width: auto;
-}
-.m-choose-product-new .m-choose-brief-detail{
-  font-size: 1.4rem;
+  ul{
+    li{
+      border-bottom: 0.1rem solid @ebebeb;
+      background-color: @white;
+      height: 12.6rem;
+    }
+  }
+  .m-choose-title{
+    font-size: 2rem;
+    margin-top: 0;
+    font-weight: bold;
+  }
+  .m-choose-detail{
+    padding:1rem;
+    width: auto;
+  }
+  .m-choose-brief-detail{
+    font-size: 1.4rem;
+  }
 }
 .m-choose-detail-next{
   float: right;
@@ -286,9 +307,9 @@
   color: #565656;
   line-height: 6.3rem;
   text-align: center;
-}
-.icon-minus-adjust:active{
-  background-color: @ebebeb;
+  &:active{
+    background-color: @ebebeb;
+  }
 }
 .icon-plus-adjust{
   height: 6.3rem;
@@ -299,9 +320,9 @@
   color: #565656;
   line-height: 6.3rem;
   text-align: center;
-}
-.icon-plus-adjust:active{
-  background-color: @ebebeb;
+  &:active{
+    background-color: @ebebeb;
+  }
 }
 
 .m-product-number{
@@ -326,24 +347,24 @@
   line-height: 5rem;
   color: #b5b5b5;
   font-size: 2rem;
-}
-.delete-order-button:active{
-  color: @fontColor;
-  background-color: @ebebeb;
+  &:active{
+    color: @fontColor;
+    background-color: @ebebeb;
+  }
 }
 
 .m-choose-product-address{
   border-radius: 0;
   border-bottom: 0.1rem solid @ebebeb;
-}
-.m-choose-product-address li{
-  border-bottom: 0.1rem solid @ebebeb;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-.m-choose-product-address li:last-child{
-  border-bottom: none;
-  position: relative;
+  li{
+    border-bottom: 0.1rem solid @ebebeb;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    &:last-child{
+      border-bottom: none;
+      position: relative;
+    }
+  }
 }
 .m-shopping-cart-detail {
   width: 60%;
@@ -364,34 +385,37 @@
   background-size: 100%;
   position: relative;
 }
-.m-center-partOne ul li{
-  display: inline-block;
-  width: 100%;
-  height: 4rem;
-  line-height: 4rem;
-  position: relative;
-  border-bottom: 0.1rem solid @ebebeb;
-}
-.m-center-partOne ul li>div:last-child{
-  position: absolute;
-  right: 1rem;
-  top: 1.2rem;
-  font-size: 2rem;
-  color: #e4e4e4;
+.m-center-partOne{
+  ul{
+    color: #565656;
+    background-color: @white;
+    border-radius: 0.416666rem;
+    border-bottom: 0.1rem solid @ebebeb;
+    li{
+      display: inline-block;
+      width: 100%;
+      height: 4rem;
+      line-height: 4rem;
+      position: relative;
+      border-bottom: 0.1rem solid @ebebeb;
+      >div{
+        &:last-child{
+          position: absolute;
+          right: 1rem;
+          top: 1.2rem;
+          font-size: 2rem;
+          color: #e4e4e4;
+        }
+        &:first-child{
+          margin-left: 1rem;
+          display: inline-block;
+          width: 1.5rem;
+        }
+      }
+    }
+  }
 }
 
-.m-center-partOne ul li>div:first-child{
-  margin-left: 1rem;
-  display: inline-block;
-  width: 1.5rem;
-}
-.m-center-partOne ul {
-  color: #565656;
-  background-color: @white;
-  border-radius: 0.416666rem;
-  border-bottom: 0.1rem solid @ebebeb;
-
-}
 .m-center-login-button{
   font-size: 2rem;
   color: @orange;
@@ -402,4 +426,49 @@
 }
 .no-order-list{
   padding: 2rem ;
+}
+.product-content{
+  height: 24rem;
+  position: relative;
+}
+.product{
+  margin-bottom: 1rem;
+}
+.top{
+  text-align: center;
+  color: @white;
+  padding-top: 4rem;
+  .title{
+    font-size: 2.4rem;
+  }
+  .detail{
+    font-size: 1.6rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+}
+.left-top{
+  position: absolute;
+  top: 2rem;
+  left: 1rem;
+  color: @white;
+  .title{
+    font-size: 2rem;
+  }
+  .detail{
+    font-size: 1.6rem;
+    margin-top: 0.5rem;
+    color: @orange;
+  }
+}
+.right-bottom{
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
+  .m-button{
+    width:10rem;
+  }
+  .m-button:first-child{
+    margin-right: 0.6rem;
+  }
 }
